# oggmap

./: .gitignore  .readthedocs.yml  CHANGES.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_check.yml  config.yml
docs/: conf.py  environment.yml  index.rst  requirements.txt
docs/changelog/: index.rst
docs/citation/: index.rst
docs/contact/: index.rst
docs/dockerfile/: Dockerfile
docs/installation/: docker_additional_information.rst  index.rst  singularity_additional_information.rst
docs/license/: index.rst
docs/modules/: index.rst  oggmap.datasets.rst  oggmap.eggnog2orthomap.rst  oggmap.gtf2t2g.rst  oggmap.ncbitax.rst  oggmap.of2orthomap.rst  oggmap.orthomap2tei.rst  oggmap.qlin.rst  oggmap.rst
docs/notebooks/: add_tei.ipynb  evolutionary_indices.ipynb  geneset_overlap.ipynb  get_orthomap.ipynb  hvulgaris_example.ipynb  query_lineage.ipynb
docs/references/: index.rst
docs/tutorials/: add_tei.rst  commandline.cds2aa.rst  commandline.eggnog2orthomap.rst  commandline.gtf2t2g.rst  commandline.ncbitax.rst  commandline.of2orthomap.rst  commandline.orthomcl2orthomap.rst  commandline.plaza2orthomap.rst  commandline.qlin.rst  commandline.rst  evolutionary_indices.rst  frog_example.rst  geneset_overlap.rst  get_orthomap.rst  hydra_example.rst  index.rst  mouse_example.rst  mytai.rst  nematode_example.rst  orthofinder.rst  paul15_example.rst  query_lineage.rst  zebrafish_example.rst
src/oggmap/: __init__.py  __main__.py  broccoli2orthomap.py  cds2aa.py  datasets.py  eggnog2orthomap.py  gtf2t2g.py  ncbitax.py  of2orthomap.py  orthomap2tei.py  orthomcl2orthomap.py  plaza2orthomap.py  qlin.py
tests/: test_cds2aa.py  test_gtf2t2g.py  test_init.py  test_ncbitax.py  test_of2orthomap.py  test_orthomap2tei.py  test_qlin.py
